--- a/css/misEstilos.css
+++ b/css/misEstilos.css
@@ -12,10 +12,26 @@ table {
 	color: #2181AE;
 }
 
+.colorFooter {
+	background-color: #2181AE;
+}
+
 .enlinea{
 	display: inline-block;
 }
 
 .activador{
 	cursor: pointer;
+}
+
+.titulo {
+	font-size: 24px;
+  	font-weight: 300;
+  	color: #F9DA0D;
+}
+
+.tituloNav {
+	font-size: 20px;
+	margin-right: 15px;
+	color: #F9DA0D;
 }
